# tracethat.dev

./: .dockerignore  .gitignore  Dockerfile  README.md  TODO.md  docker-compose.yml  fly.toml  go.mod  go.sum  home.templ  main.go
.github/workflows/: deploy-to-prod.yml  e2e-tests.yml  node.js.yml  unit-tests.yml
controller/: controller.go  crypto.go
e2e-tests/: README.md  bun.lockb  package.json  playwright.config.ts
e2e-tests/tests/: utils.ts
e2e-tests/tests/golang-server/: golang-server.spec.ts
e2e-tests/tests/javascript-server/: javascript-server-bulk.spec.ts  javascript-server.spec.ts
e2e-tests/tests/javascript-web/: javascript-web.spec.ts
e2e-tests/tests/python-server/: python-server.spec.ts
frontend/: .env.example  .gitignore  bun.lockb  components.json  index.html  package.json  tailwind.config.ts  vite.config.ts
frontend/src/: fonts.css  index.css  main.tsx
frontend/src/components/: Header.tsx  Link.tsx  (+4 more)
metrics/: metrics.go
model/: model.go
reporter-js/: .gitignore  .npmignore  Dockerfile  fly.toml  package-lock.json  package.json  tsconfig.json
reporter-js/dist-web/: tracethat.min.js
reporter-js/example/: browser.html  package-lock.json  package.json  ping.ts
reporter-js/src/: runtime-config.ts  utils.ts
reporters/: REQUIREMENTS.md
reporters/golang/: go.mod
reporters/javascript/: .npmignore  bun.lockb  package.json  tsconfig.json
reporters/python/: .gitignore  LICENSE  README.md  TODO.md  __init__.py  example.py  install.sh  json_marhsaller.py  json_marshaller_test.py  log_test.py  main.py  pyproject.toml  requirements.txt  runtime_config.py  setup.py  trace_that.py  trace_that_async_test.py  trace_that_test.py  ws_reporter.py
reporters/python/trace_that/: __init__.py  json_marshaller_test.py  log_test.py  trace_that_async_test.py  trace_that_impl.py  trace_that_test.py  ws_reporter.py
reporters/python/tracethat/: __init__.py  crypto.py  json_marhsaller.py  json_marshaller_test.py  log_test.py  runtime_config.py  tracethat_async_test.py  tracethat_impl.py  tracethat_test.py  ws_reporter.py
static/: event-details.js  jsontree.controller.js  jsontree.css  jsontree.js
view/: events.templ  landing.templ  layout.templ
(+110 files in other folders)
